tests/transpiler/x/hs/count_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:46:23 GMT+7
main :: IO ()
main = do
    print (count [1, 2, 3])
